--- a/index.html
+++ b/index.html
@@ -50,7 +50,59 @@
                 
             </div>
         </div>
-        <div class="about"></div>
+        <div class="about">
+            <header>
+                <h2>About Me</h2>
+            </header>
+            <article>
+                <h1>Who am I?</h1>
+                <h5>I'm Aishwarya Gangadharan, a Web Designer & Developer</h5>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet earum maxime, ipsam dolore ratione qui voluptatibus rem neque est? Qui nostrum nihil nam voluptates quae est quidem reprehenderit ipsa soluta?</p>
+                <h3>Connect with me 
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-square-github"></i>
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                </h3>
+            </article>
+            <main>
+                <div class="html">
+                    <h5>HTML & CSS</h5>
+                    <h3>80%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+                <div class="java">
+                    <h5>JAVA</h5>
+                    <h3>80%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+                <div class="javascript">
+                    <h5>JAVASCRIPT</h5>
+                    <h3>80%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+                <div class="sql">
+                    <h5>SQL</h5>
+                    <h3>90%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+            </main>
+            <footer> 
+                <img src="html-5.png" alt="" width="70px">
+                <img src="js.png" alt="" 
+                width="70px">
+                <img src="atom.png" alt="" width="70px">
+                <img src="java.png" alt="" width="70px">
+                <img src="oracle.png" alt="" width="70px">
+            </footer>
+        </div>
     </div>
     <script src="portfolio.js"></script>
 </body>
