--- a/index.html
+++ b/index.html
@@ -65,34 +65,7 @@
                 </h3>
             </article>
             <main>
-                <div class="html">
-                    <h5>HTML & CSS</h5>
-                    <h3>80%</h3>
-                    <div class="range">
-                        <div class="range-flow"></div>
-                    </div>
-                </div>
-                <div class="java">
-                    <h5>JAVA</h5>
-                    <h3>80%</h3>
-                    <div class="range">
-                        <div class="range-flow"></div>
-                    </div>
-                </div>
-                <div class="javascript">
-                    <h5>JAVASCRIPT</h5>
-                    <h3>80%</h3>
-                    <div class="range">
-                        <div class="range-flow"></div>
-                    </div>
-                </div>
-                <div class="sql">
-                    <h5>SQL</h5>
-                    <h3>90%</h3>
-                    <div class="range">
-                        <div class="range-flow"></div>
-                    </div>
-                </div>
+                
             </main>
             <footer> 
                 <img src="html-5.png" alt="" width="70px">
@@ -102,6 +75,106 @@
                 <img src="java.png" alt="" width="70px">
                 <img src="oracle.png" alt="" width="70px">
             </footer>
+        </div>
+        <div class="skills">
+            <header>
+                <h1>SKILLS</h1>
+            </header>
+            <aside>
+                <h2 class="f">Front-end</h2>
+                <div class="html">
+                    <h5>HTML & CSS</h5>
+                    <h3>96%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+                <div class="bootstrap">
+                    <h5>BOOTSTRAP</h5>
+                    <h3>80%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+                <div class="javascript">
+                    <h5>JAVASCRIPT</h5>
+                    <h3>70%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+                <div class="react">
+                    <h5>REACT</h5>
+                    <h3>75%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+
+
+            </aside>
+            <main>
+                <h2 class="b">Backend</h2>
+                <div class="java">
+                    <h5>JAVA</h5>
+                    <h3>90%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+                <div class="springboot">
+                    <h5>SPRINGBOOT</h5>
+                    <h3>80%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+                <div class="sql">
+                    <h5>SQL</h5>
+                    <h3>95%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+                <div class="dsa">
+                    <h5>DSA</h5>
+                    <h3>60%</h3>
+                    <div class="range">
+                        <div class="range-flow"></div>
+                    </div>
+                </div>
+
+            </main>
+        </div>
+        <div class="project">
+            <header>
+                <h1>PROJECT</h1>
+            </header>
+            <article>
+                <h1>latest projects</h1>
+                <p>Here are some recent projects, including my own <br> personal projects</p>
+            </article>
+            <div class="pro_1">
+                <img src="Screenshot (146).png" alt="" width="100%">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, exercitationem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, quis?</p>
+                <a href="#">live view
+                    <i class="fa-solid fa-arrow-right"></i>
+                </a>
+            </div>
+            <div class="pro_2">
+                <img src="Screenshot (146).png" alt="" width="100%">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, exercitationem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, quis?</p>
+                <a href="#">live view
+                    <i class="fa-solid fa-arrow-right"></i>
+                </a>
+            </div>
+            <div class="pro_3">
+                <img src="Screenshot (146).png" alt="" width="100%">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, exercitationem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, quis?</p>
+                <a href="#">live view
+                    <i class="fa-solid fa-arrow-right"></i>
+                </a>
+            </div>
         </div>
     </div>
     <script src="portfolio.js"></script>
